# super-simple-static-site

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: commitizen.yml  publish.yml  python-package.yml  release.yml
ssss/: __init__.py  __main__.py
ssss/common/: __init__.py
ssss/common/application/: __init__.py  variables.py
ssss/common/fs/: __init__.py  directory.py  file.py
ssss/common/io/: __init__.py  prompt.py
ssss/common/md/: __init__.py  info.py  render.py
ssss/configuration/: __init__.py  application.py  arguments.py  default.py
ssss/generate/: __init__.py  site.py
ssss/scaffold/: base.html  default.j2  index.md  llms.txt.j2  rss.xml.j2  sitemap.xml.j2
tests/: test_arguments.py  test_coverage_all.py  test_fs.py  test_md.py  test_ssss.py
tests/data/: ssss.yml
